--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <style>
 
   </style>
+  <body>
 
   </body>
-  <script src="/static/bundle.js"></script>s
+  <script src="script.js">
+  </script>
 </html>
